# PrismBench

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  apis.key.template  configs.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  start-dev-services.sh
.devcontainer/: README.md  devcontainer-compose.yaml  devcontainer-compose.yml  devcontainer.json  docker-compose.tutorial.yml  setup.sh  start-services.sh
configs/: environment_config.yaml  experiment_configs.yaml  phase_configs.yaml  tree_configs.yaml
configs/agents/: agent_template.yaml  challenge_designer.yaml  challenge_designer_advanced.yaml  problem_fixer.yaml  problem_solver.yaml  solution_pattern_analyzer.yaml  test_error_analyzer.yaml  test_generator.yaml  test_validator.yaml  writer.yaml
docker/: Dockerfile.base  docker-compose.yaml
docs/: Agent-System.md  Architecture-Overview.md  Configuration-Overview.md  Custom-Agents.md  Custom-Environments.md  Custom-MCTS-Phases.md  Environment-System.md  Extending-PrismBench.md  Extension-Combinations.md  Home.md  MCTS-Algorithm.md  Quick-Start.md  Results-Analysis.md  Tree-Structure.md  Troubleshooting.md  _Sidebar.md  troubleshooting.md
experiments/4o-mini/average_metrics/phase_1/: basic_metrics.json  concept_metrics.json  tree_metrics.json
experiments/4o-mini/average_metrics/phase_2/: basic_metrics.json  concept_metrics.json  tree_metrics.json
experiments/4o-mini/average_metrics/phase_3/: error_metrics.json  pattern_metrics.json  test_metrics.json
experiments/4o-mini/average_metrics/whole_tree/: basic_metrics.json  concept_metrics.json  tree_metrics.json
experiments/4o/average_metrics/phase_1/: basic_metrics.json  concept_metrics.json  tree_metrics.json
experiments/4o/average_metrics/phase_2/: basic_metrics.json  concept_metrics.json  tree_metrics.json
experiments/4o/average_metrics/phase_3/: error_metrics.json  pattern_metrics.json  test_metrics.json
experiments/4o/average_metrics/whole_tree/: basic_metrics.json  concept_metrics.json  tree_metrics.json
experiments/4o/final-3/: 0101_0800_params
experiments/llama3.1-405b/average_metrics/phase_1/: basic_metrics.json  concept_metrics.json  tree_metrics.json
experiments/llama3.1-405b/average_metrics/phase_2/: basic_metrics.json  concept_metrics.json  tree_metrics.json
experiments/llama3.1-405b/average_metrics/phase_3/: error_metrics.json  pattern_metrics.json  test_metrics.json
experiments/llama3.1-405b/average_metrics/whole_tree/: basic_metrics.json  concept_metrics.json  tree_metrics.json
experiments/llama3.1-70b/average_metrics/phase_1/: basic_metrics.json  concept_metrics.json  tree_metrics.json
experiments/llama3.1-70b/average_metrics/phase_2/: basic_metrics.json  concept_metrics.json  tree_metrics.json
experiments/llama3.1-70b/average_metrics/phase_3/: error_metrics.json  pattern_metrics.json  test_metrics.json
experiments/llama3.1-70b/average_metrics/whole_tree/: basic_metrics.json  concept_metrics.json  tree_metrics.json
experiments/llama3.1-8b/average_metrics/phase_1/: basic_metrics.json  concept_metrics.json  tree_metrics.json
experiments/llama3.1-8b/average_metrics/phase_2/: basic_metrics.json  concept_metrics.json  tree_metrics.json
experiments/llama3.1-8b/average_metrics/phase_3/: error_metrics.json  pattern_metrics.json  test_metrics.json
experiments/llama3.1-8b/average_metrics/whole_tree/: basic_metrics.json  concept_metrics.json  tree_metrics.json
src/: environment.py  llm_interface.py  main.py  mcts.py  node.py  tree.py  tree_viz_compact.py  utils.py
src/analysis/: README.md  average_concept_metrics.py  average_over_runs.py  data_loader.py  dump_trees.py  main.py  utils.py
src/analysis/metrics/: __init__.py  basic_metrics.py  error_metrics.py  interface_client.py  pattern_metrics.py  test_metrics.py
src/services/demo/: entrypoint.sh
src/services/environment/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt
src/services/environment/src/: interface_client.py  main.py
src/services/environment/src/api/v1/: router.py
src/services/environment/src/api/v1/endpoints/: __init__.py  challenges.py  health.py
src/services/environment/src/core/: __init__.py  config.py  dependencies.py  exceptions.py
src/services/environment/src/environment/: README.md  __init__.py  base_environment.py  environment_coding_challenge.py  environment_enhanced_coding_challenge.py  environment_registry.py  utils.py
src/services/environment/src/models/: __init__.py  domain.py  requests.py  responses.py
src/services/environment/src/services/: __init__.py  environment_service.py
src/services/gui/: Dockerfile  README.md  package-lock.json  package.json
src/services/gui/src/app/: layout.tsx  page.tsx
src/services/gui/src/components/: job-form.tsx  job-list.tsx  job-performance-summary.tsx  job-templates.tsx  job-tree-preview.tsx  results-table.tsx  tree-preview.tsx
src/services/gui/src/hooks/: use-jobs.ts  (+3 more)
src/services/interface/: Dockerfile  nginx.conf  package.json
src/services/interface/src/: App.js  App.test.js
src/services/llm_interface/: Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt  test.py
src/services/llm_interface/src/: main.py  redis_store.py
src/services/llm_interface/src/api/v1/: router.py
src/services/llm_interface/src/api/v1/endpoints/: health.py  history.py  interact.py  sessions.py  tasks.py
src/services/llm_interface/src/core/: config.py  dependencies.py  exceptions.py
src/services/llm_interface/src/llm/: interface.py  prompt_manager.py  tools.py  utils.py
src/services/llm_interface/src/models/: domain.py  requests.py  responses.py
src/services/llm_interface/src/repositories/: session_repo.py  task_repo.py
src/services/llm_interface/src/services/: interaction_service.py  session_service.py
src/services/search/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt  test.py
src/services/search/src/: environment_client.py  main.py
(+60 files in other folders)
