[project]
  dependencies    = ["asyncio", "fastapi", "gunicorn", "loguru", "pydantic", "python-dotenv", "redis", "uvicorn", "dspy"]
  description     = "Add your description here"
  name            = "llm-interface"
  readme          = "README.md"
  requires-python = ">=3.12"
  version         = "0.1.0"
